# azure-emulators-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
tests/: test_emulators.py
